2011-07-07  Michael Albinus  <michael.albinus@gmx.de>

	* debbugs-gnu.el (top): Add ;;; Commentary.
	(debbugs-default-severities, debbugs-default-packages)
	(debbugs-default-hits-per-page): New customer options.
	(debbugs-current-severities, debbugs-current-packages)
	(debbugs-current-archive): Renamed from `debbugs-severities',
	`debbugs-package', `debbugs-archive'.
	(debbugs-emacs): Reorder arguments.  If called interactively with
	prefix, ask for optional arguments values.  Loop also for several
	packages.
	(debbugs-show-reports): Let-bind `debbugs-port'.
	(debbugs-rescan): Loop also for several packages.

2011-07-07  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* debbugs-gnu.el (debbugs-mode-map): Bind `q' to `bury-buffer',
	which seems more useful.
	(debbugs-send-control-message): Allow reversing tags.
	(debbugs-summary-mode): Remove quiet@debbugs.gnu.org from the
	list, too.
	(debbugs-toggle-tag): Save the list of tagged articles
	immediately.  Waiting until exit is too brittle.

2011-07-06  Stefan Monnier  <monnier@iro.umontreal.ca>

	* debbugs-gnu.el (debbugs-gnu): New group.
	(widget-mouse-face, gnus-posting-styles): Declare.
	(debbugs-suppress-done): Avoid beginning-of-buffer.

2011-07-06  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* debbugs-gnu.el (debbugs-toggle-sort): Sort the tagged bugs at
	the end.
	(debbugs-emacs): Init the saved bugs on call, not on load.
	(debbugs-dump-persistency-file): Don't destroy the list while
	saving it.

2011-07-05  Michael Albinus  <michael.albinus@gmx.de>

	* debbugs-gnu.el (debbugs-owner): Remove.  We use `debbugs-tagged'
	uniquely.
	(debbugs-widgets, debbugs-package, debbugs-severities)
	(debbugs-archive): New defvars.
	(debbugs-local-tags, debbugs-persistency-file)
	(debbugs-dump-persistency-file): Add docstring.
	(debbugs-emacs): Use new defvars.
	(debbugs-show-reports):  Remove widgets from arguments.  Mark bugs
	submitted by user.
	(debbugs-mode-map): Add "x" (for purge "done" bugs).